fix(app): too large font size on mobile

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -55,13 +55,13 @@ p {
   font-family: 'Courier New', Courier, monospace;
   margin: 0;
   margin-top: 60px;
-  font-size: 29vw;
+  font-size: 16vw;
 }
 
 @media only screen and (min-width: 600px) {
   /* For tablets: */
   p {
-    font-size: 18vw;
+    font-size: 13vw;
   }
 }
 
